--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <p>
   <li>STAY MAD</li>
 </p>
+<iframe width="853" height="480" src="https://www.youtube.com/embed/vp26weVppX8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
