--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <h1>HORIZON ON TOP!</h1>
 <p>
   <li>STAY MAD</li>
+  <li><a href="https://www.youtube.com/channel/UCfaJNgrumOdK3uQtw4gDxtA?pbjreload=102">The Horizon (our saviour)</a></li>
 </p>
-
-<a href="https://www.youtube.com/channel/UCfaJNgrumOdK3uQtw4gDxtA?pbjreload=102">The Horizon (our saviour)</a>
 
 <video width="640" height="400" src="https://cdn.discordapp.com/attachments/790407056955146240/811665484365692948/video1.mp4" controls>
   What kinda fucking browser do you use that doesn't support html5 <code>video</code>, but you can
