--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <h1>HORIZON ON TOP!</h1>
 <p>
-  <li>STAY MAD</li>
-  <li><a href="https://www.youtube.com/channel/UCfaJNgrumOdK3uQtw4gDxtA?pbjreload=102">The Horizon (our saviour)</a></li>
+  STAY MAD
+  <a href="https://www.youtube.com/channel/UCfaJNgrumOdK3uQtw4gDxtA?pbjreload=102">The Horizon (our saviour)</a>
 </p>
 
 <p>
