--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <h1>HORIZON ON TOP!</h1>
 <p>
-  STAY MAD
+  STAY MAD3
   <a href="https://www.youtube.com/channel/UCfaJNgrumOdK3uQtw4gDxtA?pbjreload=102">The Horizon (our saviour)</a>
 </p>
 
