--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 
 <h1>HORIZON ON TOP!</h1>
 <p>
-  STAY MAD3
-  <a href="https://www.youtube.com/channel/UCfaJNgrumOdK3uQtw4gDxtA?pbjreload=102">The Horizon (our saviour)</a>
+  STAY MAD <br> <a href="https://www.youtube.com/channel/UCfaJNgrumOdK3uQtw4gDxtA?pbjreload=102">The Horizon (our saviour)</a>
 </p>
 
 <p>
