--- a/index.html
+++ b/index.html
@@ -11,3 +11,9 @@
     download it here <a href="https://cdn.discordapp.com/attachments/790407056955146240/811665484365692948/video1.mp4" target="_blank">Educational video on P2W</a>.
 </video>
 </p>
+
+<p>
+  <video width="640" height="400" src="https://cdn.discordapp.com/attachments/663759290024329242/811731806478270505/p2wserverowners.mp4" controls>
+  What kinda fucking browser do you use that doesn't support html5 <code>video</code>, but you can
+    download it here <a href="https://cdn.discordapp.com/attachments/663759290024329242/811731806478270505/p2wserverowners.mp4" target="_blank">P2W server owners be like</a>.
+</p>
