--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <h1>HORIZON ON TOP!</h1>
 <p>
-  STAY MAD <br> <a href="https://www.youtube.com/channel/UCfaJNgrumOdK3uQtw4gDxtA?pbjreload=102">The Horizon (our saviour)</a>
+  STAY MAD <br> <a href="https://www.youtube.com/channel/UCfaJNgrumOdK3uQtw4gDxtA?pbjreload=102">The Horizon (our lord and saviour)</a> <br> <a href="https://account.mojang.com/documents/commercial_guidelines#servers-and-hosting:~:text=sell%20entitlements%20that%20affect%20gameplay%20provided,gameplay%20elements%20such%20as%20a%20leaderboard">Mojang's EULA on P2W</a>
 </p>
 
 <p>
