--- a/index.html
+++ b/index.html
@@ -14,3 +14,5 @@
   What kinda fucking browser do you use that doesn't support html5 <code>video</code>, but you can
     download it here <a href="https://cdn.discordapp.com/attachments/813589913769476176/814638373004116058/p2wserverowners.mp4" target="_blank">P2W server owners be like</a>.
 </p>
+
+<small id="h.fzp8915a8w3v" dir="ltr" class="CDt4Ke zfr3Q TMjjoe" style="display: block; text-align: center;">©2021 Anti-P2W are among our registered and unregistered trademarks in the U.S. and other countries.</small>
