--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <p>
   <center>
-    <video width="640" height="400" src="https://cdn.discordapp.com/attachments/790407056955146240/811665484365692948/video1.mp4" controls>
+    <video width="730" height="430" src="https://cdn.discordapp.com/attachments/790407056955146240/811665484365692948/video1.mp4" controls>
       What kinda fucking browser do you use that doesn't support html5 <code>video</code>, but you can
       download it here <a href="https://cdn.discordapp.com/attachments/790407056955146240/811665484365692948/video1.mp4" target="_blank" rel="noopener noreferrer">Educational video on P2W</a>.
     </video>
@@ -29,10 +29,16 @@
 
 <p>
   <center>
-    <video width="460" height="400" src="https://cdn.discordapp.com/attachments/813589913769476176/814638373004116058/p2wserverowners.mp4" controls>
+    <video width="410" height="400" src="https://cdn.discordapp.com/attachments/813589913769476176/814638373004116058/p2wserverowners.mp4" controls>
       What kinda fucking browser do you use that doesn't support html5 <code>video</code>, but you can
       download it here <a href="https://cdn.discordapp.com/attachments/813589913769476176/814638373004116058/p2wserverowners.mp4" target="_blank" rel="noopener noreferrer">P2W server owners be like</a>.
     </video>
+  </center>
+</p>
+
+<p>
+  <center>
+    <div class="tenor-gif-embed" data-postid="20116615" data-share-method="host" data-width="50%" data-aspect-ratio="1.7785714285714287"><a href="https://tenor.com/view/horizon-on-top-gif-20116615">Horizon On Top GIF</a> from <a href="https://tenor.com/search/horizonontop-gifs">Horizonontop GIFs</a></div><script type="text/javascript" async src="https://tenor.com/embed.js"></script>
   </center>
 </p>
 
