--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <meta content="Anti-P2W" property="og:title">
   <meta content="No, this is not an ip-logger; it's clearly https:// and there's no cookies" property="og:description">
-    <meta content="https://www.anti-p2w.cf/" property="og:url">
+    <meta content="https://www.anti-p2w.cf" property="og:url">
     <meta content="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" property="og:image">
     <meta content="#FFAA00" data-react-helmet="true" name="theme-color">
 </head>
