--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <link rel="icon" href="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" type="image/x-icon">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
+  <script src="index.js"></script>
   <meta content="Anti-P2W" property="og:title">
   <meta content="No, this is not an ip-logger; it's clearly https:// and there's no cookies" property="og:description">
     <meta content="https://www.anti-p2w.cf" property="og:url">
     <meta content="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" property="og:image">
     <meta content="#FFAA00" data-react-helmet="true" name="theme-color">
-</head>
+  <meta name=”viewport” content=”width=device-width, initial-scale=1″>
+  </head>
 
 <div role="main" class="UtePc RCETm" dir="ltr"><section id="h.INITIAL_GRID.pm5nz2nr9p7t" class="yaqOZd LB7kq nyKByd O13XJf"><div class="Nu95r"><div class="IFuOkc" jsname="LQX2Vd"></div></div><div class="mYVXT"><div class="LS81yb VICjCf" tabindex="-1"><div class="hJDwNd-AhqUyc-ibL1re JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div><div class="hJDwNd-AhqUyc-OiUrBf purZT-AhqUyc-II5mzb pSzOP-AhqUyc-qWD73c JNdkSc yYI8W "><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"><div class="oKdM2c Kzv0Me"><div id="h.INITIAL_GRID.de0nqm845sj1" class="hJDwNd-AhqUyc-OiUrBf jXK9ad D2fZ2 OjCsFc GNzUNc"><div class="jXK9ad-SmKAyb"><div class="tyJCtd mGzaTb baZpAe lkHyyc"><h1 id="h.o46uxupjfw2z" dir="ltr" class="CDt4Ke zfr3Q duRjpb" style="text-align: center;"><span class=" afVDVd" style="vertical-align: baseline;">Horizon On Top!</span></h1></div></div></div></div><div class="oKdM2c"><div id="h.17d51fe4cd60a586_0" class="hJDwNd-AhqUyc-OiUrBf jXK9ad D2fZ2 wHaque GNzUNc"><div class="jXK9ad-SmKAyb"><div class="tyJCtd mGzaTb baZpAe"><p dir="ltr" class="CDt4Ke zfr3Q" style="text-align: center;">STAY MAD</p></div></div></div></div></div></div></div><div class="hJDwNd-AhqUyc-ibL1re JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div></div></div></section><section id="h.17d51fe4cd60a586_8" class="yaqOZd"><div class="IFuOkc"></div><div class="mYVXT"><div class="LS81yb VICjCf" tabindex="-1"><div class="hJDwNd-AhqUyc-II5mzb JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div><div class="hJDwNd-AhqUyc-ibL1re purZT-AhqUyc-ibL1re pSzOP-AhqUyc-ibL1re JNdkSc"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"><div class="oKdM2c Kzv0Me"><div id="h.17d51fe4cd60a586_5" class="hJDwNd-AhqUyc-ibL1re jXK9ad D2fZ2 OjCsFc wHaque"><div class="jXK9ad-SmKAyb"><div class="tyJCtd N0neUc baZpAe"><div role="presentation" class="U26fgb L7IXhc htnAL QmpIrf" jscontroller="VXdfxd" jsaction="click:cOuCgd; mousedown:UX7yZ; mouseup:lbsD7e; mouseenter:tfO1Yc; mouseleave:JywGue; focus:AHmuwe; blur:O22p3e; contextmenu:mg9Pef;"<div class="wvnY3c" jsname="ksKsZd"></div></a></div></div></div></div></div></div></div></div><div class="hJDwNd-AhqUyc-c5RTEf JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div></div></div></section></div>
 <body>
@@ -45,6 +47,65 @@
   <center>
     <div class="tenor-gif-embed" data-postid="20116615" data-share-method="host" data-width="50%" data-aspect-ratio="1.7785714285714287"><a href="https://tenor.com/view/horizon-on-top-gif-20116615">Horizon On Top GIF</a> from <a href="https://tenor.com/search/horizonontop-gifs">Horizonontop GIFs</a></div><script type="text/javascript" async src="https://tenor.com/embed.js"></script>
   </center>
+</p>
+
+<p>
+  <br>
+  <h2>Spam this in P2W discord servers!</h2>
+  <input type="text" value="
+  https://account.mojang.com/documents/commercial_guidelines#servers-and-hosting:~:text=sell%20entitlements%20that%20affect%20gameplay%20provided,gameplay%20elements%20such%20as%20a%20leaderboard" id="spam1">
+  <button onclick="spam1()">Copy text</button>
+  <br>
+  <br>
+  <input type="text" value="
+  https://cdn.discordapp.com/attachments/790407056955146240/811665484365692948/video1.mp4" id="spam2">
+  <button onclick="spam2()">Copy text</button>
+  <br>
+  <br>
+  <input type="text" value="
+  https://cdn.discordapp.com/attachments/813589913769476176/814638373004116058/p2wserverowners.mp4" id="spam3">
+  <button onclick="spam3()">Copy text</button>
+  <br>
+  <br>
+  <input type="text" value="
+  https://tenor.com/view/horizon-on-top-gif-20116615" id="spam4">
+  <button onclick="spam4()">Copy text</button>
+  <br>
+  <br>
+  <input type="text" value="
+  **https://tenor.com/view/minecraft-reddit-funny-gif-14138658?size=我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地**" id="spam5">
+  <button onclick="spam5()">Copy text</button>
+  <br>
+  <br>
+  <input type="text" value="
+  \n(sorry for ms paint google images and energy condenser instead of alchemical chest but my computer is still broken so i cant build this right now)
+  \nbut that's basically how it would work (with extra utilities 1 and projectE)
+  \nor you could go the easier route and just do an emerald tier cobble gen and get much more cobble much faster)
+  \nalthough where's the fun in that
+  \n(also this could potentially be faster if you added more speed upgrades)
+  \nalso you would only need the actually additions mod instead of these two
+  \njust use a hopper instead of a transfer node and pipe it into a regular chest
+  \n(you need the transfer node to 'mine' the cobble in the image above and an alchemical chest just has a lot more storage)
+  \nalso old lava texture ew (but actually not ew depending on who you are)
+  \nthis setup would probably best be done in 1.7.10 since i believe that that is the newest supported version of extra utilities 1 (although i am probably wrong as i am too lazy to check)
+  \nalso it could technically work in extra utilities 2 as long as you have some grid power to power the mining upgrades and whatnot
+  \nalso if you want to be a stickler about it you will need an extra extra utilities transfer pipe since these dont neccesarily come with the transfer nodes any more although you get a stack of them per craft so it shouldnt be that hard
+  \n(also you can still use projectE since that is actually the latest version of the old mod (equivalent expansions)
+  \nanyways time to stop rambling about (not my) my 4 year old design
+  \nand if you REALLY want me to get rambling wait until you hear about my semi-auto 64k applied energistics 2 data cell maker (not fully automatic version because this one requires you to give it the parts for it to work but updated version coming soon after my pc starts working again)
+  \nand i actually fully designed this one myself!
+  \nreddit post i made about it
+  \nhttps://www.reddit.com/r/feedthebeast/comments/k91k1a/i_finished_my_automatic_64k_me_storage_cell_maker/" id="spam6">
+  <button onclick="spam6()">Copy text</button>
+  <br>
+  <br>
+  <input type="text" value="
+  Number 15: Burger king foot lettuce. The last thing you'd want in your Burger King burger is someone's foot fungus. But as it turns out, that might be what you get. A 4channer uploaded a photo anonymously to the site showcasing his feet in a plastic bin of lettuce. With the statement: 'This is the lettuce you eat at Burger King.' Admittedly, he had shoes on.
+  \n
+  But that's even worse.
+  \n
+  The post went live at 11:38 PM on July 16, and a mere 20 minutes later, the Burger King in question was alerted to the rogue employee. At least, I hope he's rogue. How did it happen? Well, the BK employee hadn't removed the Exif data from the uploaded photo, which suggested the culprit was somewhere in Mayfield Heights, Ohio. This was at 11:47. Three minutes later at 11:50, the Burger King branch address was posted with wishes of happy unemployment. 5 minutes later, the news station was contacted by another 4channer. And three minutes later, at 11:58, a link was posted: BK's 'Tell us about us' online forum. The foot photo, otherwise known as exhibit A, was attached. Cleveland Scene Magazine contacted the BK in question the next day. When questioned, the breakfast shift manager said 'Oh, I know who that is. He's getting fired.' Mystery solved, by 4chan. Now we can all go back to eating our fast food in peace." id="spam7">
+  <button onclick="spam7()">Copy text</button>
 </p>
 
 <small id="h.fzp8915a8w3v" dir="ltr" class="CDt4Ke zfr3Q TMjjoe" style="display: block; text-align: center;">©2021 Anti-P2W (by MR_Blaster) are among our registered and unregistered trademarks in the U.S, U.K and other countries.</small>
