--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <html lang="en">
   <title>Anti-P2W</title>
   <link rel="icon" href="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" type="image/x-icon">
   <meta charset="UTF-8">
@@ -10,7 +11,7 @@
     <meta content="https://www.anti-p2w.cf" property="og:url">
     <meta content="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" property="og:image">
     <meta content="#FFAA00" data-react-helmet="true" name="theme-color">
-  <meta name=”viewport” content=”width=device-width, initial-scale=1″>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <noscript>Mf why don't you have JavaScript enabled?</noscript>
