--- a/index.html
+++ b/index.html
@@ -82,29 +82,29 @@
   <br>
   <br>
   <input type="text" value="
-  \n(sorry for ms paint google images and energy condenser instead of alchemical chest but my computer is still broken so i cant build this right now)
-  \nbut that's basically how it would work (with extra utilities 1 and projectE)
-  \nor you could go the easier route and just do an emerald tier cobble gen and get much more cobble much faster)
-  \nalthough where's the fun in that
-  \n(also this could potentially be faster if you added more speed upgrades)
-  \nalso you would only need the actually additions mod instead of these two
-  \njust use a hopper instead of a transfer node and pipe it into a regular chest
-  \n(you need the transfer node to 'mine' the cobble in the image above and an alchemical chest just has a lot more storage)
-  \nalso old lava texture ew (but actually not ew depending on who you are)
-  \nthis setup would probably best be done in 1.7.10 since i believe that that is the newest supported version of extra utilities 1 (although i am probably wrong as i am too lazy to check)
-  \nalso it could technically work in extra utilities 2 as long as you have some grid power to power the mining upgrades and whatnot
-  \nalso if you want to be a stickler about it you will need an extra extra utilities transfer pipe since these dont neccesarily come with the transfer nodes any more although you get a stack of them per craft so it shouldnt be that hard
-  \n(also you can still use projectE since that is actually the latest version of the old mod (equivalent expansions)
-  \nanyways time to stop rambling about (not my) my 4 year old design
-  \nand if you REALLY want me to get rambling wait until you hear about my semi-auto 64k applied energistics 2 data cell maker (not fully automatic version because this one requires you to give it the parts for it to work but updated version coming soon after my pc starts working again)
-  \nand i actually fully designed this one myself!
-  \nreddit post i made about it
-  \nhttps://www.reddit.com/r/feedthebeast/comments/k91k1a/i_finished_my_automatic_64k_me_storage_cell_maker/" id="spam6">
+(sorry for ms paint google images and energy condenser instead of alchemical chest but my computer is still broken so i cant build this right now)
+  but that's basically how it would work (with extra utilities 1 and projectE)
+  or you could go the easier route and just do an emerald tier cobble gen and get much more cobble much faster)
+  although where's the fun in that
+  (also this could potentially be faster if you added more speed upgrades)
+  also you would only need the actually additions mod instead of these two
+  just use a hopper instead of a transfer node and pipe it into a regular chest
+  (you need the transfer node to 'mine' the cobble in the image above and an alchemical chest just has a lot more storage)
+  also old lava texture ew (but actually not ew depending on who you are)
+  this setup would probably best be done in 1.7.10 since i believe that that is the newest supported version of extra utilities 1 (although i am probably wrong as i am too lazy to check)
+  also it could technically work in extra utilities 2 as long as you have some grid power to power the mining upgrades and whatnot
+  also if you want to be a stickler about it you will need an extra extra utilities transfer pipe since these dont neccesarily come with the transfer nodes any more although you get a stack of them per craft so it shouldnt be that hard
+  (also you can still use projectE since that is actually the latest version of the old mod (equivalent expansions)
+  anyways time to stop rambling about (not my) my 4 year old design
+  and if you REALLY want me to get rambling wait until you hear about my semi-auto 64k applied energistics 2 data cell maker (not fully automatic version because this one requires you to give it the parts for it to work but updated version coming soon after my pc starts working again)
+  and i actually fully designed this one myself!
+  reddit post i made about it
+  https://www.reddit.com/r/feedthebeast/comments/k91k1a/i_finished_my_automatic_64k_me_storage_cell_maker/" id="spam6">
   <button onclick="spam6()">Copy text</button>
   <br>
   <br>
   <input type="text" value="
-  Number 15: Burger king foot lettuce. The last thing you'd want in your Burger King burger is someone's foot fungus. But as it turns out, that might be what you get. A 4channer uploaded a photo anonymously to the site showcasing his feet in a plastic bin of lettuce. With the statement: 'This is the lettuce you eat at Burger King.' Admittedly, he had shoes on.
+Number 15: Burger king foot lettuce. The last thing you'd want in your Burger King burger is someone's foot fungus. But as it turns out, that might be what you get. A 4channer uploaded a photo anonymously to the site showcasing his feet in a plastic bin of lettuce. With the statement: 'This is the lettuce you eat at Burger King.' Admittedly, he had shoes on.
   \n
   But that's even worse.
   \n
