--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <html lang="en">
   <meta name="keywords" content="Anti-P2W,Minecraft,Horizon,Server,P2W,Scam,SalC1,Lag Machine,Hacking,Exploit,Bug,Crashing,Duping,Hacked Client">
   <meta name="Description" content="Horizon On Top, Stay Mad!">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta content="Anti-P2W" property="og:title">
   <meta content="No, this is not an ip-logger; it's clearly https:// and there's no cookies" property="og:description">
     <meta content="https://www.anti-p2w.cf" property="og:url">
     <meta content="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" property="og:image">
     <meta content="#FFAA00" data-react-helmet="true" name="theme-color">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="anti-p2w.cf" property="og:site_name">
   <title>Anti-P2W</title>
   <link rel="icon" href="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" type="image/x-icon">
   <meta charset="UTF-8">
