--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <html lang="en">
-  <meta name="keywords" content="Anti-P2W,Minecraft,Horizon,Server,P2W,Scam,SalC1,Lag Machine,Hacking,Exploit,Bug,Crashing,Duping,Hacked Client">
+  <meta name="keywords" content="Anti-P2W,Minecraft,Horizon,Server,P2W,Scam,SalC1,Lag Machine,Hacking,Exploit,Bug,Crashing,Duping,Hacked Client,pay-to-win,pay-to-win server">
   <meta name="Description" content="Horizon On Top, Stay Mad!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta content="Anti-P2W" property="og:title">
