--- a/index.html
+++ b/index.html
@@ -115,4 +115,4 @@ Number 15: Burger king foot lettuce. The last thing you'd want in your Burger Ki
   <button onclick="spam7()">Copy text</button>
 </p>
 
-<small id="h.fzp8915a8w3v" dir="ltr" class="CDt4Ke zfr3Q TMjjoe" style="display: block; text-align: center;">©2021 Anti-P2W (by MR_Blaster) are among our registered and unregistered trademarks in the U.S, U.K and other countries.</small>
+<small id="h.fzp8915a8w3v" dir="ltr" class="CDt4Ke zfr3Q TMjjoe" style="display: block; text-align: center;">Copyright ©2021 Anti-P2W (by MR_Blaster) are among our registered and unregistered trademarks in the U.S, U.K and other countries.</small>
