--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="https://www.anti-p2w.cf" property="og:url">
     <meta content="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" property="og:image">
     <meta content="#FFAA00" data-react-helmet="true" name="theme-color">
-    <meta content="anti-p2w.cf" property="og:site_name">
+    <meta content="www.anti-p2w.cf" property="og:site_name">
   <title>Anti-P2W</title>
   <link rel="icon" href="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" type="image/x-icon">
   <meta charset="UTF-8">
