--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <center>
     <a href="https://www.youtube.com/channel/UCfaJNgrumOdK3uQtw4gDxtA?pbjreload=102" target="_blank" rel="noopener noreferrer">
-      <button class="btn">Horizon</button>
+      <button class="btn"><i class="fa fa-download"></i>Horizon</button>
     </a>
     <a href="https://account.mojang.com/documents/commercial_guidelines#servers-and-hosting:~:text=sell%20entitlements%20that%20affect%20gameplay%20provided,gameplay%20elements%20such%20as%20a%20leaderboard" target="_blank" rel="noopener noreferrer">
       <button class="btn2">Mojang's EULA</button>
