--- a/index.html
+++ b/index.html
@@ -30,20 +30,25 @@
   <link rel="stylesheet" href="style.css">
   <script src="index.js"></script>
 </head>
-
 <body>
 <noscript>Mf why don't you have JavaScript enabled?</noscript>
 <div role="main" class="UtePc RCETm" dir="ltr"><section id="h.INITIAL_GRID.pm5nz2nr9p7t" class="yaqOZd LB7kq nyKByd O13XJf"><div class="Nu95r"><div class="IFuOkc" jsname="LQX2Vd"></div></div><div class="mYVXT"><div class="LS81yb VICjCf" tabindex="-1"><div class="hJDwNd-AhqUyc-ibL1re JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div><div class="hJDwNd-AhqUyc-OiUrBf purZT-AhqUyc-II5mzb pSzOP-AhqUyc-qWD73c JNdkSc yYI8W "><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"><div class="oKdM2c Kzv0Me"><div id="h.INITIAL_GRID.de0nqm845sj1" class="hJDwNd-AhqUyc-OiUrBf jXK9ad D2fZ2 OjCsFc GNzUNc"><div class="jXK9ad-SmKAyb"><div class="tyJCtd mGzaTb baZpAe lkHyyc"><h1 id="h.o46uxupjfw2z" dir="ltr" class="CDt4Ke zfr3Q duRjpb" style="text-align: center;"><span class=" afVDVd" style="vertical-align: baseline;">Horizon On Top!</span></h1></div></div></div></div><div class="oKdM2c"><div id="h.17d51fe4cd60a586_0" class="hJDwNd-AhqUyc-OiUrBf jXK9ad D2fZ2 wHaque GNzUNc"><div class="jXK9ad-SmKAyb"><div class="tyJCtd mGzaTb baZpAe"><p dir="ltr" class="CDt4Ke zfr3Q" style="text-align: center;">STAY MAD</p></div></div></div></div></div></div></div><div class="hJDwNd-AhqUyc-ibL1re JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div></div></div></section><section id="h.17d51fe4cd60a586_8" class="yaqOZd"><div class="IFuOkc"></div><div class="mYVXT"><div class="LS81yb VICjCf" tabindex="-1"><div class="hJDwNd-AhqUyc-II5mzb JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div><div class="hJDwNd-AhqUyc-ibL1re purZT-AhqUyc-ibL1re pSzOP-AhqUyc-ibL1re JNdkSc"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"><div class="oKdM2c Kzv0Me"><div id="h.17d51fe4cd60a586_5" class="hJDwNd-AhqUyc-ibL1re jXK9ad D2fZ2 OjCsFc wHaque"><div class="jXK9ad-SmKAyb"><div class="tyJCtd N0neUc baZpAe"><div role="presentation" class="U26fgb L7IXhc htnAL QmpIrf" jscontroller="VXdfxd" jsaction="click:cOuCgd; mousedown:UX7yZ; mouseup:lbsD7e; mouseenter:tfO1Yc; mouseleave:JywGue; focus:AHmuwe; blur:O22p3e; contextmenu:mg9Pef;"<div class="wvnY3c" jsname="ksKsZd"></div></a></div></div></div></div></div></div></div></div><div class="hJDwNd-AhqUyc-c5RTEf JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div></div></div></section></div>
+
 <body>
   <center>
     <a href="https://www.youtube.com/channel/UCfaJNgrumOdK3uQtw4gDxtA?pbjreload=102" target="_blank" rel="noopener noreferrer">
-      <button class="btn">Horizon</button>
-    </a>
+      <button class="btn">Horizon</button></a>
+
     <a href="https://account.mojang.com/documents/commercial_guidelines#servers-and-hosting:~:text=sell%20entitlements%20that%20affect%20gameplay%20provided,gameplay%20elements%20such%20as%20a%20leaderboard" target="_blank" rel="noopener noreferrer">
-      <button class="btn2">Mojang's EULA</button>
-    </a>
+      <button class="btn2">Mojang's EULA</button></a>
   </center>
 </body>
+
+<p style="font-size: 18px;">
+About us:
+<br>
+We are a group dedicated to ending P2W as it breaks Minecraft's EULA (end user license agreement) which is breaking a contract that you sign when you make a minecraft server. P2W (or pay-to-win) is unfair as not only does it break Mojang's EULA but it is also unfair on others who don't pay as paying gives you an advantage over others which pressures young children and others to buy their P2W items which is almost scamming them.
+</p>
 
 <p>
   <center>
