--- a/index.html
+++ b/index.html
@@ -77,32 +77,32 @@ We are a group dedicated to ending P2W as it breaks Minecraft's EULA (end user l
 <p>
   <br>
   <h2>Spam this in P2W discord servers!</h2>
-  <input type="text" value="
+  <input class="spam" type="text" value="
 https://account.mojang.com/documents/commercial_guidelines#servers-and-hosting:~:text=sell%20entitlements%20that%20affect%20gameplay%20provided,gameplay%20elements%20such%20as%20a%20leaderboard" id="spam1">
   <button onclick="spam1()">Copy text</button>
   <br>
   <br>
-  <input type="text" value="
+  <input class="spam" type="text" value="
 https://cdn.discordapp.com/attachments/790407056955146240/811665484365692948/video1.mp4" id="spam2">
   <button onclick="spam2()">Copy text</button>
   <br>
   <br>
-  <input type="text" value="
+  <input class="spam" type="text" value="
 https://cdn.discordapp.com/attachments/813589913769476176/814638373004116058/p2wserverowners.mp4" id="spam3">
   <button onclick="spam3()">Copy text</button>
   <br>
   <br>
-  <input type="text" value="
+  <input class="spam" type="text" value="
 https://tenor.com/view/horizon-on-top-gif-20116615" id="spam4">
   <button onclick="spam4()">Copy text</button>
   <br>
   <br>
-  <input type="text" value="
+  <input class="spam" type="text" value="
 **https://tenor.com/view/minecraft-reddit-funny-gif-14138658?size=我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地将你的悲惨的屁股子。我将尽其所能地**" id="spam5">
   <button onclick="spam5()">Copy text</button>
   <br>
   <br>
-  <input type="text" value="
+  <input class="spam" type="text" value="
 (sorry for ms paint google images and energy condenser instead of alchemical chest but my computer is still broken so i cant build this right now)
   but that's basically how it would work (with extra utilities 1 and projectE)
   or you could go the easier route and just do an emerald tier cobble gen and get much more cobble much faster)
@@ -124,7 +124,7 @@ https://tenor.com/view/horizon-on-top-gif-20116615" id="spam4">
   <button onclick="spam6()">Copy text</button>
   <br>
   <br>
-  <input type="text" value="
+  <input class="spam" type="text" value="
 Number 15: Burger king foot lettuce. The last thing you'd want in your Burger King burger is someone's foot fungus. But as it turns out, that might be what you get. A 4channer uploaded a photo anonymously to the site showcasing his feet in a plastic bin of lettuce. With the statement: 'This is the lettuce you eat at Burger King.' Admittedly, he had shoes on.
 
   But that's even worse.
@@ -133,6 +133,6 @@ Number 15: Burger king foot lettuce. The last thing you'd want in your Burger Ki
   <button onclick="spam7()">Copy text</button>
 </p>
 
-<small id="h.fzp8915a8w3v" dir="ltr" class="CDt4Ke zfr3Q TMjjoe" style="display: block; text-align: center;">Copyright ©2021 Anti-P2W (by MR_Blaster) are among our registered and unregistered trademarks in the U.S, U.K and other countries.</small>
+<small id="h.fzp8915a8w3v" dir="ltr" class="CDt4Ke zfr3Q TMjjoe" style="display: block; text-align: center; isolation: isolate;">Copyright ©2021 Anti-P2W (by MR_Blaster) are among our registered and unregistered trademarks in the U.S, U.K and other countries.</small>
 </body>
 </html>
