--- a/tree.html
+++ b/tree.html
@@ -20,6 +20,7 @@
   <meta content="Anti-P2W" property="og:title">
   <meta content="Tree is a living meme" property="og:description">
   <meta content="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" property="og:image">
+  <meta property="og:type" content="video">
   <meta content="./files/tree.mp4" property="og:video">
   <meta content="application/x-shockwave-flash" property="og:video:type">
   <meta content="550" property="og:video:width">
