--- a/tree.html
+++ b/tree.html
@@ -20,11 +20,18 @@
   <meta content="Anti-P2W" property="og:title">
   <meta content="Tree is a living meme" property="og:description">
   <meta content="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" property="og:image">
+
   <meta property="og:type" content="video">
+  <meta property="og:video:url" content="./files/tree.mp4">
+  <meta property="og:video:secure_url" content="./files/tree.mp4">
   <meta content="./files/tree.mp4" property="og:video">
-  <meta content="application/x-shockwave-flash" property="og:video:type">
-  <meta content="550" property="og:video:width">
-  <meta content="450" property="og:video:height">
+  <meta property="og:video:type" content="text/html">
+  <meta property="og:video:width" content="1280">
+  <meta property="og:video:height" content="720">
+  <meta property="og:video:type" content="application/x-shockwave-flash">
+  <meta property="og:video:width" content="1280">
+  <meta property="og:video:height" content="720">
+
   <meta content="#FFAA00" data-react-helmet="true" name="theme-color">
 
   <title>Hivemind</title>
@@ -42,7 +49,7 @@
 
 <p>
     <center>
-      <video width="550" height="450" src="./files/tree.mp4" controls>
+      <video width="1280" height="630" src="./files/tree.mp4" controls>
         What kinda fucking browser do you use that doesn't support html5 <code>video</code>, but you can
         download it here <a href="./files/tree.mp4" target="_blank" rel="noopener noreferrer">Tree is a fucking meme</a>.
       </video>
