--- a/tree.html
+++ b/tree.html
@@ -22,9 +22,9 @@
   <meta content="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" property="og:image">
 
   <meta property="og:type" content="video">
-  <meta property="og:video:url" content="./files/tree.mp4">
-  <meta property="og:video:secure_url" content="./files/tree.mp4">
-  <meta content="./files/tree.mp4" property="og:video">
+  <meta property="og:video:url" content="https://www.anti-p2w.cf/tree-video">
+  <meta property="og:video:secure_url" content="https://www.anti-p2w.cf/tree-video">
+  <meta content="https://www.anti-p2w.cf/tree-video" property="og:video">
   <meta property="og:video:type" content="text/html">
   <meta property="og:video:width" content="1280">
   <meta property="og:video:height" content="720">
