--- a/tree.html
+++ b/tree.html
@@ -22,9 +22,9 @@
   <meta content="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" property="og:image">
 
   <meta property="og:type" content="video">
-  <meta property="og:video:url" content="https://www.anti-p2w.cf/tree-video">
-  <meta property="og:video:secure_url" content="https://www.anti-p2w.cf/tree-video">
-  <meta content="https://www.anti-p2w.cf/tree-video" property="og:video">
+  <meta property="og:video:url" content="https://youtu.be/ilxxoDluGx4">
+  <meta property="og:video:secure_url" content="https://youtu.be/ilxxoDluGx4">
+  <meta property="og:video" content="https://youtu.be/ilxxoDluGx4">
   <meta property="og:video:type" content="text/html">
   <meta property="og:video:width" content="1280">
   <meta property="og:video:height" content="720">
@@ -34,7 +34,7 @@
 
   <meta content="#FFAA00" data-react-helmet="true" name="theme-color">
 
-  <title>Hivemind</title>
+  <title>Anti-P2W</title>
   <link rel="icon" href="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" type="image/x-icon">
 
   <link rel="stylesheet" href="index.css">
@@ -49,7 +49,7 @@
 
 <p>
     <center>
-      <video width="1280" height="630" src="./files/tree.mp4" controls>
+      <video width="1280" height="630" src="./files/tree.mp4" autoplay controls>
         What kinda fucking browser do you use that doesn't support html5 <code>video</code>, but you can
         download it here <a href="./files/tree.mp4" target="_blank" rel="noopener noreferrer">Tree is a fucking meme</a>.
       </video>
