--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta content="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" property="og:image">
   <meta content="#FFAA00" data-react-helmet="true" name="theme-color">
 
-  <title>Hivemind</title>
+  <title>Anti-P2W</title>
   <link rel="icon" href="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" type="image/x-icon">
 
   <link rel="stylesheet" href="index.css">
