--- a/tree.html
+++ b/tree.html
@@ -22,12 +22,14 @@
   <meta content="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" property="og:image">
 
   <meta property="og:type" content="video">
-  <meta property="og:video:url" content="https://youtu.be/ilxxoDluGx4">
-  <meta property="og:video:secure_url" content="https://youtu.be/ilxxoDluGx4">
-  <meta property="og:video" content="https://youtu.be/ilxxoDluGx4">
+  <meta property="og:video:url" content="https://www.youtube.com/embed/ilxxoDluGx4">
+  <meta property="og:video:secure_url" content="https://www.youtube.com/embed/ilxxoDluGx4">
+  <meta property="og:video" content="https://www.youtube.com/embed/ilxxoDluGx4">
   <meta property="og:video:type" content="text/html">
   <meta property="og:video:width" content="1280">
   <meta property="og:video:height" content="720">
+  <meta property="og:video:url" content="http://www.youtube.com/v/ilxxoDluGx4?version=3&amp;autohide=1">
+  <meta property="og:video:secure_url" content="https://www.youtube.com/v/ilxxoDluGx4?version=3&amp;autohide=1">
   <meta property="og:video:type" content="application/x-shockwave-flash">
   <meta property="og:video:width" content="1280">
   <meta property="og:video:height" content="720">
