--- a/tree-video.html
+++ b/tree-video.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<video width="auto" height="auto" src="./files/tree.mp4" autoplay controls>
+<video width="auto" height="auto" src="https://github.com/BlasterStudios/e/blob/main/files/tree.mp4" autoplay controls>
     What kinda fucking browser do you use that doesn't support html5 <code>video</code>, but you can
     download it here <a href="./files/tree.mp4" target="_blank" rel="noopener noreferrer">Tree is a fucking meme</a>.
 </video>
