--- a/coco.html
+++ b/coco.html
@@ -57,7 +57,8 @@
 <center>
 <video src="https://cdn-cf-east.streamable.com/video/mp4/bdgnvg.mp4?Expires=1621532220&Signature=WJlfb68KbKPweUHxTRmp3koAtr~qFjePdcuP~wxFEx-BJa73TTaGmF6xVtg8ujzpGGV8Un~03lCXRbrNkZxtujV3WfymqYEVFeUnOnco5Wp0xomppe3lyaAoOenOavnV8JwysoIEqS-D8bJ9HsfBB7QXKKjb-L3gYhThjOhf7kmhaMLFboOhhd0uao99JInfSG-Lqes~E4fxP5Ie3Ae231~VYo5dW8DwNUFQFWjF1R-ipQ8R1BuUgWqMwFezhn7VgTE2h2~5Ov-phdcoNf~0-Umk2vJYMiAbHPvw51n4cPOUv~JoGXabHVtyq4ullN1oTeJtRukpJF4Un4uvCnhgjQ__&Key-Pair-Id=APKAIEYUVEN4EVB2OKEQ" autoplay controls></video>
 <br>
-[Lyrics]
+<strong>[Lyrics]</strong>
+<br>
 <br>
 Hey kids
 <br>
