--- a/coco.html
+++ b/coco.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
 
-  <html lang="en">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,171 +44,169 @@
   <link rel="icon" href="https://cdn.discordapp.com/attachments/813589913769476176/815242145798946846/HorizonOnTop.jpg" type="image/x-icon">
 
   <link rel="stylesheet" href="index.css">
-  <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
   <script src="index.js"></script>
 
 </head>
 <body style="background-color: #1c1c1c; color: #e6e7e8;">
 
 <noscript><p>Mf why don't you have JavaScript enabled?</p></noscript>
-<div role="main" class="UtePc RCETm" dir="ltr"><section id="h.INITIAL_GRID.pm5nz2nr9p7t" class="yaqOZd LB7kq nyKByd O13XJf"><div class="Nu95r"><div class="IFuOkc" jsname="LQX2Vd"></div></div><div class="mYVXT"><div class="LS81yb VICjCf" tabindex="-1"><div class="hJDwNd-AhqUyc-ibL1re JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div><div class="hJDwNd-AhqUyc-OiUrBf purZT-AhqUyc-II5mzb pSzOP-AhqUyc-qWD73c JNdkSc yYI8W "><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"><div class="oKdM2c Kzv0Me"><div id="h.INITIAL_GRID.de0nqm845sj1" class="hJDwNd-AhqUyc-OiUrBf jXK9ad D2fZ2 OjCsFc GNzUNc"><div class="jXK9ad-SmKAyb"><div class="tyJCtd mGzaTb baZpAe lkHyyc"><h1 id="h.o46uxupjfw2z" dir="ltr" class="CDt4Ke zfr3Q duRjpb" style="text-align: center;"><span class=" afVDVd" style="vertical-align: baseline;">PewDiePie Coco!</span></h1></div></div></div></div><div class="oKdM2c"><div id="h.17d51fe4cd60a586_0" class="hJDwNd-AhqUyc-OiUrBf jXK9ad D2fZ2 wHaque GNzUNc"><div class="jXK9ad-SmKAyb"><div class="tyJCtd mGzaTb baZpAe"><p dir="ltr" class="CDt4Ke zfr3Q" style="text-align: center;">poggers</p></div></div></div></div></div></div></div><div class="hJDwNd-AhqUyc-ibL1re JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div></div></div></section><section id="h.17d51fe4cd60a586_8" class="yaqOZd"><div class="IFuOkc"></div><div class="mYVXT"><div class="LS81yb VICjCf" tabindex="-1"><div class="hJDwNd-AhqUyc-II5mzb JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div><div class="hJDwNd-AhqUyc-ibL1re purZT-AhqUyc-ibL1re pSzOP-AhqUyc-ibL1re JNdkSc"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"><div class="oKdM2c Kzv0Me"><div id="h.17d51fe4cd60a586_5" class="hJDwNd-AhqUyc-ibL1re jXK9ad D2fZ2 OjCsFc wHaque"><div class="jXK9ad-SmKAyb"><div class="tyJCtd N0neUc baZpAe"><div role="presentation" class="U26fgb L7IXhc htnAL QmpIrf" jscontroller="VXdfxd" jsaction="click:cOuCgd; mousedown:UX7yZ; mouseup:lbsD7e; mouseenter:tfO1Yc; mouseleave:JywGue; focus:AHmuwe; blur:O22p3e; contextmenu:mg9Pef;"<div class="wvnY3c" jsname="ksKsZd"></div></a></div></div></div></div></div></div></div></div><div class="hJDwNd-AhqUyc-c5RTEf JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div></div></div></section></div>
+<h1 style="text-align: center;">Coco - PewDiePie</h1><p style="text-align: center; font-size: medium;">A reupload of the coco diss track!</p>
 
 <p>
 <center>
 <video controls>
-    <source src="https://cdn-cf-east.streamable.com/video/mp4/bdgnvg.mp4?Expires=1621532220&Signature=WJlfb68KbKPweUHxTRmp3koAtr~qFjePdcuP~wxFEx-BJa73TTaGmF6xVtg8ujzpGGV8Un~03lCXRbrNkZxtujV3WfymqYEVFeUnOnco5Wp0xomppe3lyaAoOenOavnV8JwysoIEqS-D8bJ9HsfBB7QXKKjb-L3gYhThjOhf7kmhaMLFboOhhd0uao99JInfSG-Lqes~E4fxP5Ie3Ae231~VYo5dW8DwNUFQFWjF1R-ipQ8R1BuUgWqMwFezhn7VgTE2h2~5Ov-phdcoNf~0-Umk2vJYMiAbHPvw51n4cPOUv~JoGXabHVtyq4ullN1oTeJtRukpJF4Un4uvCnhgjQ__&Key-Pair-Id=APKAIEYUVEN4EVB2OKEQ" type="video/mp4">
+    <source src="./files/coco.mp4" type="video/mp4">
     <track label="English" kind="subtitles" srclang="en" src="./files/coco_subtitles.vtt" default>
 </video>
 </center>
 </p>
 
-<p>
-<strong>[Lyrics]</strong>
-<br>
-<br>
-Hey kids
-<br>
-Hey PewDiePie
-<br>
-Gather round little ones, it's music time
-<br>  
-Yay
-<br>  
-Here is the story that I'm tellin'
-<br>  
-What is it?
-<br>  
-About a stupid fuckin' bitch-ass melon
-<br>  
-Yay!
-<br>  
-Coco, coco, co
-<br>  
-You fuckin' with my mojo-jo-jo-jo (everybody)
-<br>  
-Coco, coco, co
-<br>  
-You started, so let's go, go, go, go, go (let's go)
-<br>  
-Ga-ga-ga-ga-ga-ga-goo
-<br>  
-Fuck your dad and mama too
-<br>  
-Coco in a chokehold, I go loco if you want me to (woo)
-<br>  
-Ga-ga-ga-ga-ga-ga-gee
-<br>  
-You ain't fuckin' passin' me
-<br>  
-Last time that I dissed, it took a government to blacklist me
-<br>  
-Yeah, I saw your shit
-<br>  
-Ew, fuckin' cringe (ew)
-<br>  
-It's not even funny and your head is really big (why?)
-<br>  
-Oh, you're approaching me?
-<br>  
-What, you think I'm nervous? (Nah)
-<br>  
-Your audience is just a bunch of motherfuckin' virgins (aha)
-<br>  
-Don't tell your mama, don't be a fucking snitch
-<br>  
-Don't be like 6iinе, that rainbow fuckin' bitch
-<br>  
-Spartan shit, yeet a baby straight off a cliff (what?)
-<br>  
-If they make it out alive, I'll bе their Make-a-Wish
-<br>  
-Coco, coco, co
-<br>  
-You fuckin' with my mojo-jo-jo-jo (hey)
-<br>  
-Coco, coco, co
-<br>  
-You started, so let's go, go, go, go, go
-<br>  
-Fuck your daddy, fuck your mommy too
-<br>  
-Fuck everything you love, most of all, fuck you (oh)
-<br>  
-Cry, cry, cry, yeah, I don't give a shit (he's crazy)
-<br>  
-I'm your mommy now you little baby bitch
-<br>  
-I'll say anything, I don't give a fuck (what?)
-<br>  
-Santa isn't real, its your daddy dressed up (what?)
-<br>  
-Mommy's always lying when she says you're really smart
-<br>  
-Your dog is not in Heaven, he is rotting in the yard
-<br>  
-Haha, big sad
-<br>  
-I'll spoil Harry Potter, wait, J.K. already did that
-<br>  
-Haha, you on that baby shit
-<br>  
-I'ma teach you 'bout the real world, baby bitch (bath time)
-<br>  
-Scrub behind your ears (okay)
-<br>  
-Then you rinse your eyes (okay)
-<br>  
-And when you leave the tub, watch out for 6iine (louder)
-<br>  
-A is for apple, B is for books
-<br>  
-C is for, "Can you shut the fuck up?" (Louder)
-<br>  
-Rainbow bitch, hair too bright
-<br>  
-He a dumb-dumb who can fight, fight, fight
-<br>  
-Don't eat lead paint or you'll cry, cry, cry
-<br>  
-Then your brain will end up like 6iine-9ine-9ine (facts)
-<br>  
-Coco, coco, co
-<br>  
-You fuckin' with my mojo-jo-jo-jo (okay)
-<br>  
-Coco, coco, co
-<br>  
-You started, so let's go, go, go, go, go (okay)
-<br>  
-A billion views a week (what?)
-<br>  
-A billion views a week (huh?)
-<br>  
-Babies must be viewing when their mommy is asleep
-<br>  
-While their brain is developing, before they can talk
-<br>  
-They learn to subscribe before they can walk (what?)
-<br>  
-Little three year olds with withdrawal symptoms
-<br>  
-Mommy, please don't take away the algorithm
-<br>  
-And they won't quit until they get all of the children
-<br>  
-Who gives a shit when you're beggin' for a hundred million
-<br>  
-I'm just playin' Coco, you know I love you
-<br>  
-Not 6iine, though, ankle monitor-wearing
-<br>  
-I challenge you in a legal fight
-<br>  
-Otherwise, you's a rainbow bitch
-<br>  
-Why is he dissing 6iine?
-</center>
+<h2 style="text-align: center;">[Lyrics]</h2>
+
+<p style="text-align: center;">
+    Hey kids
+    <br>
+    Hey PewDiePie
+    <br>
+    Gather round little ones, it's music time
+    <br>
+    Yay
+    <br>
+    Here is the story that I'm tellin'
+    <br>
+    What is it?
+    <br>
+    About a stupid fuckin' bitch-ass melon
+    <br>
+    Yay!
+    <br>
+    Coco, coco, co
+    <br>
+    You fuckin' with my mojo-jo-jo-jo (everybody)
+    <br>
+    Coco, coco, co
+    <br>
+    You started, so let's go, go, go, go, go (let's go)
+    <br>
+    Ga-ga-ga-ga-ga-ga-goo
+    <br>
+    Fuck your dad and mama too
+    <br>
+    Coco in a chokehold, I go loco if you want me to (woo)
+    <br>
+    Ga-ga-ga-ga-ga-ga-gee
+    <br>
+    You ain't fuckin' passin' me
+    <br>
+    Last time that I dissed, it took a government to blacklist me
+    <br>
+    Yeah, I saw your shit
+    <br>
+    Ew, fuckin' cringe (ew)
+    <br>
+    It's not even funny and your head is really big (why?)
+    <br>
+    Oh, you're approaching me?
+    <br>
+    What, you think I'm nervous? (Nah)
+    <br>
+    Your audience is just a bunch of motherfuckin' virgins (aha)
+    <br>
+    Don't tell your mama, don't be a fucking snitch
+    <br>
+    Don't be like 6iinе, that rainbow fuckin' bitch
+    <br>
+    Spartan shit, yeet a baby straight off a cliff (what?)
+    <br>
+    If they make it out alive, I'll bе their Make-a-Wish
+    <br>
+    Coco, coco, co
+    <br>
+    You fuckin' with my mojo-jo-jo-jo (hey)
+    <br>
+    Coco, coco, co
+    <br>
+    You started, so let's go, go, go, go, go
+    <br>
+    Fuck your daddy, fuck your mommy too
+    <br>
+    Fuck everything you love, most of all, fuck you (oh)
+    <br>
+    Cry, cry, cry, yeah, I don't give a shit (he's crazy)
+    <br>
+    I'm your mommy now you little baby bitch
+    <br>
+    I'll say anything, I don't give a fuck (what?)
+    <br>
+    Santa isn't real, its your daddy dressed up (what?)
+    <br>
+    Mommy's always lying when she says you're really smart
+    <br>
+    Your dog is not in Heaven, he is rotting in the yard
+    <br>
+    Haha, big sad
+    <br>
+    I'll spoil Harry Potter, wait, J.K. already did that
+    <br>
+    Haha, you on that baby shit
+    <br>
+    I'ma teach you 'bout the real world, baby bitch (bath time)
+    <br>
+    Scrub behind your ears (okay)
+    <br>
+    Then you rinse your eyes (okay)
+    <br>
+    And when you leave the tub, watch out for 6iine (louder)
+    <br>
+    A is for apple, B is for books
+    <br>
+    C is for, "Can you shut the fuck up?" (Louder)
+    <br>
+    Rainbow bitch, hair too bright
+    <br>
+    He a dumb-dumb who can fight, fight, fight
+    <br>
+    Don't eat lead paint or you'll cry, cry, cry
+    <br>
+    Then your brain will end up like 6iine-9ine-9ine (facts)
+    <br>
+    Coco, coco, co
+    <br>
+    You fuckin' with my mojo-jo-jo-jo (okay)
+    <br>
+    Coco, coco, co
+    <br>
+    You started, so let's go, go, go, go, go (okay)
+    <br>
+    A billion views a week (what?)
+    <br>
+    A billion views a week (huh?)
+    <br>
+    Babies must be viewing when their mommy is asleep
+    <br>
+    While their brain is developing, before they can talk
+    <br>
+    They learn to subscribe before they can walk (what?)
+    <br>
+    Little three year olds with withdrawal symptoms
+    <br>
+    Mommy, please don't take away the algorithm
+    <br>
+    And they won't quit until they get all of the children
+    <br>
+    Who gives a shit when you're beggin' for a hundred million
+    <br>
+    I'm just playin' Coco, you know I love you
+    <br>
+    Not 6iine, though, ankle monitor-wearing
+    <br>
+    I challenge you in a legal fight
+    <br>
+    Otherwise, you's a rainbow bitch
+    <br>
+    Why is he dissing 6iine?
 </p>
+
 <small id="h.fzp8915a8w3v" dir="ltr" class="CDt4Ke zfr3Q TMjjoe" style="display: block; text-align: center; isolation: isolate;">© Anti-P2W 2021 • All rights reserved.</small>
 </body>
 </html>
