--- a/coco.html
+++ b/coco.html
@@ -13,7 +13,7 @@
 
   <meta name="title" content="PewDiePie Coco">
   <meta name="description" content="Reupload of the cocomelon diss track!">
-  <meta name="keywords" content="PewDiePie, Coco, DissTrack">
+  <meta name="keywords" content="PewDiePie, Coco, Diss Track, Cocomelon, reupload, Hello, I read website's source code">
 
   <meta content="https://www.anti-p2w.cf/coco" property="og:url">
   <meta content="www.anti-p2w.cf" property="og:site_name">
