--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body style="background-color: #1c1c1c; color: #e6e7e8;">
 
-<noscript><p>Mf why don't you have JavaScript enabled?</p></noscript>
+<noscript><p>Imagine disabling javascript</p></noscript>
 <div role="main" class="UtePc RCETm" dir="ltr"><section id="h.INITIAL_GRID.pm5nz2nr9p7t" class="yaqOZd LB7kq nyKByd O13XJf"><div class="Nu95r"><div class="IFuOkc" jsname="LQX2Vd"></div></div><div class="mYVXT"><div class="LS81yb VICjCf" tabindex="-1"><div class="hJDwNd-AhqUyc-ibL1re JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div><div class="hJDwNd-AhqUyc-OiUrBf purZT-AhqUyc-II5mzb pSzOP-AhqUyc-qWD73c JNdkSc yYI8W "><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"><div class="oKdM2c Kzv0Me"><div id="h.INITIAL_GRID.de0nqm845sj1" class="hJDwNd-AhqUyc-OiUrBf jXK9ad D2fZ2 OjCsFc GNzUNc"><div class="jXK9ad-SmKAyb"><div class="tyJCtd mGzaTb baZpAe lkHyyc"><h1 id="h.o46uxupjfw2z" dir="ltr" class="CDt4Ke zfr3Q duRjpb" style="text-align: center;"><span class=" afVDVd" style="vertical-align: baseline;">Horizon On Top!</span></h1></div></div></div></div><div class="oKdM2c"><div id="h.17d51fe4cd60a586_0" class="hJDwNd-AhqUyc-OiUrBf jXK9ad D2fZ2 wHaque GNzUNc"><div class="jXK9ad-SmKAyb"><div class="tyJCtd mGzaTb baZpAe"><p dir="ltr" class="CDt4Ke zfr3Q" style="text-align: center;">STAY MAD</p></div></div></div></div></div></div></div><div class="hJDwNd-AhqUyc-ibL1re JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div></div></div></section><section id="h.17d51fe4cd60a586_8" class="yaqOZd"><div class="IFuOkc"></div><div class="mYVXT"><div class="LS81yb VICjCf" tabindex="-1"><div class="hJDwNd-AhqUyc-II5mzb JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div><div class="hJDwNd-AhqUyc-ibL1re purZT-AhqUyc-ibL1re pSzOP-AhqUyc-ibL1re JNdkSc"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"><div class="oKdM2c Kzv0Me"><div id="h.17d51fe4cd60a586_5" class="hJDwNd-AhqUyc-ibL1re jXK9ad D2fZ2 OjCsFc wHaque"><div class="jXK9ad-SmKAyb"><div class="tyJCtd N0neUc baZpAe"><div role="presentation" class="U26fgb L7IXhc htnAL QmpIrf" jscontroller="VXdfxd" jsaction="click:cOuCgd; mousedown:UX7yZ; mouseup:lbsD7e; mouseenter:tfO1Yc; mouseleave:JywGue; focus:AHmuwe; blur:O22p3e; contextmenu:mg9Pef;"<div class="wvnY3c" jsname="ksKsZd"></div></a></div></div></div></div></div></div></div></div><div class="hJDwNd-AhqUyc-c5RTEf JNdkSc L6cTce-purZT L6cTce-pSzOP"><div class="JNdkSc-SmKAyb"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"></div></div></div></div></div></section></div>
 
 <p>
@@ -48,7 +48,7 @@
 <p>
   <center>
     <video width="730" height="430" src="https://cdn.discordapp.com/attachments/790407056955146240/811665484365692948/video1.mp4" controls>
-      What kinda fucking browser do you use that doesn't support html5 <code>video</code>, but you can
+      Your browser does not support html5 for some reason <code>video</code>, but you can
       download it here <a href="https://cdn.discordapp.com/attachments/790407056955146240/811665484365692948/video1.mp4" target="_blank" rel="noopener noreferrer">Educational video on P2W</a>.
     </video>
   </center>
@@ -57,7 +57,7 @@
 <p>
   <center>
     <video width="410" height="400" src="https://cdn.discordapp.com/attachments/813589913769476176/814638373004116058/p2wserverowners.mp4" controls>
-      What kinda fucking browser do you use that doesn't support html5 <code>video</code>, but you can
+      Your browser does not support html5 for some reason <code>video</code>, but you can
       download it here <a href="https://cdn.discordapp.com/attachments/813589913769476176/814638373004116058/p2wserverowners.mp4" target="_blank" rel="noopener noreferrer">P2W server owners be like</a>.
     </video>
   </center>
